# otus6_cpp_matrix2.0

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
